# tree-sitter-swiprolog

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-swiprolog.pc.in
bindings/c/tree_sitter/: tree-sitter-swiprolog.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_swiprolog/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSwiPrologTests/: TreeSitterSwiPrologTests.swift
examples/: buckshot.pl  buckshot.swipl  markdown.pl  markdown.swipl  quasi-min.pl  quasi.pl  quasi.swipl  quasi.swipl.blah  tyck.pl
queries/: highlights.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basic.txt  character_literals.txt  comments.txt  dicts.txt  operators.txt  quasiquote.txt  simple.txt
